<resources>
    <string name="app_name">Guide for Ace Racer</string>
    <string name="back_symbol"><![CDATA[<]]></string>
    <string name="about_app">ABOUT APP</string>
    <string name="guide">GUIDE</string>
    <string name="send_feedback_to_developer">SEND FEEDBACK TO DEVELOPER</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="infinitysenseiofficial">InfinitySenseiOfficial</string>
    <string name="our_development_group_operates_under_the_name_infinitysenseiofficial_this_page_informs_you_of_our_policies_regarding_the_collection_use_and_disclosure_of_personal_information_we_receive_from_users_of_the_apps_we_use_your_personal_information_only_for_providing_and_improving_the_apps_by_using_our_apps_you_agree_to_the_collection_and_use_of_information_in_accordance_with_this_policy">Our development group operates under the name: InfinitySenseiOfficial. This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Apps. We use your Personal Information only for providing and improving the Apps. By using Our Apps, you agree to the collection and use of information in accordance with this policy.</string>
    <string name="phone_stats_to_track_your_progress_in_our_apps_games_specifically_and_witch_levels_to_lock_and_unlock_we_need_permission_to_read_phone_stats_android_permission_read_phone_state_no_change_can_be_done_to_your_personal_data_no_access_can_be_granted_or_demanded_to_acceess_your_personal_data">Phone Stats To track your progress in our apps (Games specifically) and witch levels to lock and unlock we need permission to read phone stats (android.permission.READ_PHONE_STATE) no change can be done to your personal data/ no access can be granted or demanded to acceess your personal data and INTERNET is need for ads activity</string>
    <string name="contact_developer">CONTACT DEVELOPER:</string>
    <string name="email_sahilpreet907_gmail_com">Email :infinitysenseiofficial@gmail.com</string>
    <string name="privacy_policy2">Privacy Policy</string>
    <string name="send_mail">Send mail</string>
    <string name="pic">pic</string>
    <string name="infinitysenseiofficial_gmail_com">infinitysenseiofficial@gmail.com</string>
    <string name="enter_a_subject">Enter a subject</string>
    <string name="type_in_your_message">Type in your message</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="are_you_a_fan_of_racing_games_we_have_to_agree_that_apart_from_some_mainstream_games_the_offer_of_good_racing_games_isn_t_so_big_on_mobile_however_this_trend_is_slowly_changing_with_the_arrival_of_many_good_games_from_big_companies_now_netease_is_bringing_a_new_racing_game_called_ace_racer_to_android_and_ios_the_game_has_a_big_focus_on_online_multiplayer_and_feels_like_a_mixture_between_other_games_like_asphalt_legends_and_speed_drifters_netease_has_published_a_12_min_video_on_youtube_to_show_some_interesting_details_of_ace_racer_as_we_can_see_the_game_feature_simples_commands_and_the_races_are_relatively_small_with_up_to_2_minutes_of_duration_however_the_scenery_is_well_done_with_multiple_paths_leading_to_the_finish_line_it_has_stunning_graphics_and_we_can_feel_like_we_are_playing_a_console_game_apart_from_the_traditional_competitive_races_the_game_will_also_include_other_events_like_a_gold_collect_mode_and_destruction_races_the_latter_is_particularly_interesting_if_you_want_to_take_a_break_from_traditional_races_and_just_want_to_destroy_your_opponents_unfortunately_the_game_is_still_on_closed_beta_in_south_korea_for_now_the_company_is_yet_to_announce_a_global_launch_we_believe_that_ace_racer_will_be_free_and_online_only_despite_being_a_beta_test_the_game_is_impressive_when_installed_it_weighs_a_little_over_4gb_so_it_s_definitively_a_game_for_high_end_smartphones">Are you a fan of racing games? We have to agree that apart from some mainstream games, the offer of good racing games isn’t so big on Mobile. However, this trend is slowly changing with the arrival of many good games from big companies. Now, A new racing game called Ace Racers to Android and iOS. The game has a big focus on online multiplayer and feels like a mixture between other games like Asphalt games and other big racing games.  has published a 12 min video is available  to show some interesting details of Ace Racers. As we can see, the game feature simples commands, and the races are relatively small with up to 2 minutes of duration. However, the scenery is well done with multiple paths leading to the finish line. It has stunning graphics and we can feel like we are playing a console game. Apart from the traditional competitive races, the game will also include other events like a gold-collect mode and destruction races. The latter is particularly interesting if you want to take a break from traditional races and just want to destroy your opponents. Unfortunately, the game is still on closed beta in South Korea. for now, the company is yet to announce a Global launch. We believe that Ace Racers will be free and online-only. Despite being a beta test, the game is impressive. When installed it weighs a little over 4GB. So, it’s definitively a game for high-end smartphones. Guide will be updated as soon as more information is available.</string>
    <string name="todo">TODO</string>
    <string name="bannerid">ca-app-pub-3399959546059150/8321620257</string>
</resources>